# QTetris

./: CMakeLists.txt  INSTALL  README  main.cpp
Block/: CMakeLists.txt  block.cpp  block.h
Game/: CMakeLists.txt  Game.cpp  Game.h
Shape/: CMakeLists.txt  shape.cpp  shape.h
UI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
