cmake_minimum_required (VERSION 3.0)
project (Tetris CXX)
set (TETRIS_VERSION_MAJOR 1)
set (TETRIS_VERSION_MINOR 0)
set (EXECUTABLE "Tetris")
if(WIN32 AND NOT UNIX)
set (CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "C:\\Qt\\Qt5.7\\msvc2015_62\\bin")
include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_BINARY_DIR}/UI")
include_directories("${PROJECT_BINARY_DIR}/Block")
include_directories("${PROJECT_BINARY_DIR}/Shape")
include_directories("${PROJECT_BINARY_DIR}/Game")
add_subdirectory(Game)
add_subdirectory(UI)
add_subdirectory(Block)
add_subdirectory(Shape)
add_executable(${EXECUTABLE} main.cpp)
set_property(TARGET ${EXECUTABLE} PROPERTY CXX_STANDARD 11)
set(CMAKE_AUTOMOC TRUE)
set(EXTRA_LIBS ${EXTRA_LIBS} UI)
set(EXTRA_LIBS ${EXTRA_LIBS} Block)
set(EXTRA_LIBS ${EXTRA_LIBS} Shape)
set(EXTRA_LIBS ${EXTRA_LIBS} Game)
find_package(Qt5Core)
find_package(Qt5Widgets)
target_link_libraries(${EXECUTABLE} Qt5::Core Qt5::Widgets ${EXTRA_LIBS})
