find_package(Qt5Widgets)
find_package(Qt5Core)
find_package(Threads)
include_directories("../Block")
include_directories("../UI")
include_directories("../Shape")
set (EXTRA_LIBS ${EXTRA_LIBS} Block)
set (EXTRA_LIBS ${EXTRA_LIBS} Shape)
set (EXTRA_LIBS ${EXTRA_LIBS} UI)
set(CMAKE_AUTOMOC TRUE)
add_library(Game Game.cpp)
target_link_libraries(Game ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT} Qt5::Widgets Qt5::Core)
